--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,9 +1,7 @@
 ---
 layout: empty
-permalink: /tradeaudit/privacy-policy
+permalink: /privacy-policy
 title: "Privacy Policy"
-sitemap: false
-author_profile: false
 ---
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
