--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,9 +1,7 @@
 ---
 layout: empty
-permalink: /tradeaudit/terms-of-use
+permalink: /terms-of-use
 title: "Terms of Use"
-sitemap: false
-author_profile: false
 ---
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
