--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,9 @@
 ---
 layout: empty
-permalink: /privacy-policy
+permalink: /tradeaudit/privacy-policy
 title: "Privacy Policy"
+sitemap: false
+author_profile: false
 ---
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
