--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,7 +1,9 @@
 ---
 layout: empty
-permalink: /terms-of-use
+permalink: /tradeaudit/terms-of-use
 title: "Terms of Use"
+sitemap: false
+author_profile: false
 ---
 <style>
   [data-custom-class='body'], [data-custom-class='body'] * {
