--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,6 @@
 ---
 layout: empty
-permalink: /tradeaudit/privacy-policy
+permalink: /privacy-policy
 title: "Privacy Policy"
 sitemap: false
 author_profile: false
