--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,6 +1,6 @@
 ---
 layout: empty
-permalink: /tradeaudit/terms-of-use
+permalink: /terms-of-use
 title: "Terms of Use"
 sitemap: false
 author_profile: false
