--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1119,8 +1119,8 @@ functioning of the Site.</span></div>
                         style="font-size: 15px; line-height: 115%; font-family: Arial; color: rgb(89, 89, 89);">We care about data privacy and security. Please review our Privacy Policy: <strong><bdt
                         class="block-container question question-in-editor"
                         data-id="d10c7fd7-0685-12ac-c717-cbc45ff916d1" data-type="question"><a
-                        href="https://www.stevenskelton.ca/tradeaudit/privacy-policy" target="_blank"
-                        data-custom-class="link">https://www.stevenskelton.ca/tradeaudit/privacy-policy</a></bdt></strong>. By using the Site, you agree to be bound by our Privacy Policy, which is incorporated into these <bdt
+                        href="https://tradeaudit.app/privacy-policy" target="_blank"
+                        data-custom-class="link">https://tradeaudit.app/privacy-policy</a></bdt></strong>. By using the Site, you agree to be bound by our Privacy Policy, which is incorporated into these <bdt
                         class="block-component"></bdt><bdt class="question">Terms of Use</bdt><bdt
                         class="statement-end-if-in-editor"></bdt>. Please be advised the Site is hosted in <bdt
                         class="block-component"></bdt>the <bdt class="question">United States</bdt><bdt
