--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"-->
-<!--            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"-->
-<!--            crossorigin="anonymous"></script>-->
-</head>
-<body>
-<nav class="py-2 bg-light border-bottom">
-    <div class="container d-flex flex-wrap">
-        <span class="me-auto fs-1">Trade Audit</span>
-        <img alt="Get it on Google Play" height="60px" id="logo-img" src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png">
-    </div>
-</nav>
+---
+layout: empty
+permalink: /
+title: "Trade Audit"
+sitemap: true
+author_profile: false
+---
+
 <!--
 <header class="py-3 mb-4 border-bottom">
     <div class="container d-flex flex-wrap justify-content-center">
@@ -179,29 +171,3 @@
         <li class="list-group-item">And a fifth one</li>
     </ul>
 </div>
-
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-      <span class="mb-3 mb-md-0 text-muted">© 2022 Company, Inc</span>
-    </div>
-
-<!--    <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">-->
-<!--      Hi!-->
-<!--    </a>-->
-
-    <ul class="nav col-md-4 justify-content-end">
-      <li class="nav-item"><a href="/terms-of-use" class="nav-link px-2 text-muted">Terms of Use</a></li>
-      <li class="nav-item"><a href="/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
-      <li class="nav-item"><a href="/cookie-policy" class="nav-link px-2 text-muted">Cookie Policy</a></li>
-    </ul>
-<!--    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">-->
-<!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>-->
-<!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>-->
-<!--      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>-->
-<!--    </ul>-->
-  </footer>
-</body>
-</html>
