--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1567,7 +1567,7 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;"><bdt class="block
 
 </style>
 </div>
-<div style="color: #595959;font-size: 14px;font-family: Arial;padding-top:16px;">
+<div style="color: #595959;font-size: 14px;font-family: Arial;padding-top:16px;padding-bottom:16px;text-align:center;">
     These terms of use were created using Termly's <a style="color: rgb(48, 48, 241) !important;"
                                                       href="https://termly.io/products/terms-and-conditions-generator/">Terms
     and Conditions Generator</a>.
