--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3017,7 +3017,7 @@ word-break: break-word !important;
             
     </style>
 </div>
-<div style="color: #595959;font-size: 14px;font-family: Arial;padding-top:16px;">
+<div style="color: #595959;font-size: 14px;font-family: Arial;padding-top:16px;padding-bottom:16px;text-align:center;">
     This
     privacy
     policy
