--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ export class PieChart extends LitElement {
   render() {
 
     let arr = [
-      { percent: this.positive ?? 0, color: 'Coral' },
-      { percent: this.negative ?? 0, color: 'CornflowerBlue' },
+      { percent: this.positive ?? 0, color: '#538600' },
+      { percent: this.negative ?? 0, color: '#9f003e' },
     ];
 
     function getCoordinatesForPercent(percent) {
@@ -53,15 +53,26 @@ export class PieChart extends LitElement {
       const pathData = [
         `M ${startX} ${startY}`, // Move
         `A 1 1 0 ${largeArcFlag} 1 ${endX} ${endY}`, // Arc
-        `L 0 0`, // Line
       ].join(' ');
 
-      return svg`<path d="${pathData}" fill="${slice.color}"></path>`;
+      return svg`<path d="${pathData}" stroke="${slice.color}" stroke-width="0.45" fill="transparent"/>`;
     })
 
+    const total = this.positive + this.negative;
+    const percent = total == 0 ? 0 : (this.positive / total * 100);
+    const text = Math.round(percent) + '%';
+    const textX = text.length == 4 ? -16.5 : (text.length == 3 ? -12 : -7);
+
     return svg`
-       <svg xmlns="http://www.w3.org/2000/svg" viewBox="-1 -1 2 2" style="transform: rotate(-90deg);height:200px;">
-       ${slices}
+       <svg xmlns="http://www.w3.org/2000/svg" viewBox="-1.3 -1.3 2.6 2.6" height="100" width="100">
+         <style>
+            .small {
+              font: bold 13px sans-serif;
+              color: black;
+            }
+         </style>
+         ${slices}
+         <text class="small" transform="scale(0.043, 0.043)" x="${textX}" y="4">${text}</text>
        </svg>
     `;
   }
