--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@ export class UserSummary extends LitElement {
                             }
                         )}
                     </div>
-                    <a href="https://tradeaudit.app/user?twitter=${item.twitterUserName}">
-                        <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
-                    </a>
+                    ${
+                      (this.selectedStockId != null) ? html`<a href="https://tradeaudit.app/user?twitter=${item.twitterUserName}">
+                          <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
+                      </a>` : html`<div style="width:60px"></div>`
+                    }
                     <pie-chart size="${height}" positive="${item.positiveRatingPercent}" negative="${item.negativeRatingPercent}"></pie-chart>
                 </li>`
             )}
